--- a/index.html
+++ b/index.html
@@ -2,91 +2,161 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Historia Nocturna</title>
+<title>Lilium – Carta Gótica</title>
+
 <style>
-html,body{
-  margin:0;
-  padding:0;
-  width:100%;
-  height:100%;
-  overflow:hidden;
-  font-family:'Georgia',serif;
-  background:#0b1530;
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background: #0b0814;
+  font-family: "Georgia", serif;
 }
 
-.scene{
-  position:absolute;
-  inset:0;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  opacity:0;
-  transition:opacity 2s ease;
+/* ESCENAS */
+.scene {
+  position: absolute;
+  inset: 0;
+  opacity: 0;
+  transition: opacity 3s ease;
 }
 
-.scene.active{opacity:1}
+.scene.active {
+  opacity: 1;
+}
 
-.stars{
-  position:absolute;
-  inset:0;
+/* ATMÓSFERA */
+.twilight {
+  background: radial-gradient(circle at top, #2a183f, #090612 70%);
+}
+
+.particles::before {
+  content: "";
+  position: absolute;
+  inset: 0;
   background:
-    radial-gradient(white 1px, transparent 1px),
-    radial-gradient(white 1px, transparent 1px);
-  background-size:3px 3px,5px 5px;
-  animation:twinkle 6s infinite alternate;
+    radial-gradient(#ffffff55 1px, transparent 1px),
+    radial-gradient(#ffffff33 1px, transparent 1px);
+  background-size: 3px 3px, 6px 6px;
+  animation: floatParticles 12s linear infinite;
 }
 
-@keyframes twinkle{
-  from{opacity:.4}
-  to{opacity:.8}
+@keyframes floatParticles {
+  from { transform: translateY(0); }
+  to { transform: translateY(-40px); }
 }
 
-.moon{
-  position:absolute;
-  top:60px;
-  left:80px;
-  width:70px;
-  height:70px;
-  background:#f2f2f2;
-  border-radius:50%;
-  box-shadow:0 0 25px #fff;
+/* LILIUM */
+.lilium {
+  position: absolute;
+  bottom: 80px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 380px;
+  animation: breathe 6s ease-in-out infinite;
+  filter: drop-shadow(0 0 25px #c77aa0);
 }
 
-.text{
-  color:#cfd8ff;
-  font-size:32px;
-  letter-spacing:2px;
-  text-shadow:0 0 15px rgba(180,200,255,.7);
-  animation:fadeText 3s ease;
+@keyframes breathe {
+  0%,100% { transform: translateX(-50%) scale(1); }
+  50% { transform: translateX(-50%) scale(1.05); }
 }
 
-@keyframes fadeText{
-  from{opacity:0;transform:translateY(10px)}
-  to{opacity:1;transform:translateY(0)}
+/* MARIPOSAS */
+.butterfly {
+  position: absolute;
+  width: 60px;
+  animation: fly 14s linear infinite;
 }
 
-.flowers{
-  position:absolute;
-  bottom:50px;
-  right:120px;
-  width:220px;
-  animation:float 6s ease-in-out infinite;
+.purple { filter: hue-rotate(260deg) saturate(1.3); }
+.red { filter: hue-rotate(330deg) saturate(1.5); }
+
+@keyframes fly {
+  from { transform: translateX(-10vw) translateY(0); }
+  to { transform: translateX(110vw) translateY(-120px); }
 }
 
-@keyframes float{
-  0%,100%{transform:translateY(0)}
-  50%{transform:translateY(-15px)}
+/* PERGAMINO */
+.parchment {
+  position: absolute;
+  top: 15%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 60%;
+  padding: 40px;
+  background: #f2eadc;
+  border: 8px solid #2a1b24;
+  box-shadow: 0 0 40px rgba(0,0,0,.8);
+  opacity: 0;
+  animation: appear 4s ease forwards;
+  animation-delay: 4s;
 }
 
-.butterfly{
-  position:absolute;
-  width:40px;
-  animation:fly 12s linear infinite;
+@keyframes appear {
+  to { opacity: 1; }
 }
 
-@keyframes fly{
-  from{transform:translateX(-50px) translateY(0)}
-  to{transform:translateX(110vw) translateY(-120px)}
+.parchment p {
+  color: #2a1b24;
+  font-size: 18px;
+  line-height: 1.6;
+  text-align: center;
+}
+
+/* TRANSICIÓN */
+.transition {
+  position: absolute;
+  inset: 0;
+  background: rgba(20,10,30,0.95);
+  opacity: 0;
+  transition: opacity 3s ease;
+}
+
+/* ESCENA 2 */
+.interior {
+  background: radial-gradient(circle, #1a0e12, #050204);
+}
+
+.candle {
+  position: absolute;
+  bottom: 120px;
+  left: 50%;
+  width: 20px;
+  height: 80px;
+  background: #e6d3b1;
+  transform: translateX(-50%);
+}
+
+.flame {
+  position: absolute;
+  top: -30px;
+  left: 50%;
+  width: 20px;
+  height: 30px;
+  background: radial-gradient(circle, #ffd27d, #ff8c00);
+  border-radius: 50%;
+  transform: translateX(-50%);
+  animation: flicker 1.5s infinite;
+}
+
+@keyframes flicker {
+  0%,100% { transform: translateX(-50%) scale(1); }
+  50% { transform: translateX(-50%) scale(0.85); }
+}
+
+.text2 {
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 65%;
+  color: #e6d3b1;
+  font-size: 16px;
+  line-height: 1.6;
+  white-space: pre-wrap;
 }
 </style>
 </head>
@@ -94,30 +164,71 @@ html,body{
 <body>
 
 <!-- ESCENA 1 -->
-<div class="scene active" id="scene1">
-  <div class="stars"></div>
-  <div class="moon"></div>
-  <div class="text">I love you</div>
+<div class="scene active twilight particles" id="scene1">
+  <img class="lilium" src="https://i.imgur.com/9wH4X2B.png">
+
+  <img class="butterfly purple" src="https://i.imgur.com/8QfY6KZ.png" style="top:40%; animation-delay:0s">
+  <img class="butterfly red" src="https://i.imgur.com/8QfY6KZ.png" style="top:55%; animation-delay:5s">
+
+  <div class="parchment">
+    <p>
+Quizás yo no esté allí,<br>
+pero si escuchás Lilium,<br>
+sabé que voy a estar a tu lado<br>
+en cada palabra de la carta que te escribí,<br>
+mi amor.
+    </p>
+  </div>
 </div>
+
+<div class="transition" id="transition"></div>
 
 <!-- ESCENA 2 -->
-<div class="scene" id="scene2">
-  <div class="stars"></div>
-  <div class="moon"></div>
-  <div class="text" style="font-size:18px; position:absolute; left:90px; top:160px;">
-    Y si tuviera la posibilidad<br>de volver a enamorarme de ti
-  </div>
-  <img class="flowers" src="https://i.imgur.com/YQ9QZQJ.png">
-</div>
+<div class="scene interior" id="scene2">
+  <div class="text2">
+mi cumpleañeros favorito, mi alma unida a la tuya,
+Inquiriste una vez —en el refugio del silencio— si existiría un alma capaz de ofrendar su aliento por la tuya.
+Yo callé. No por ignorancia, sino porque hay amores de una estirpe tan vasta que lacerarían los labios al intentar nombrarlos.
+Mis silencios anhelaban hacerse carne, verso y gesto irreversible.
+Hubiese abrazado el dolor ancestral que me habita desde antes del nombre, mil veces y en mil agonías,
+con tal de rescatar de tu rostro un mínimo pliegue de luz;
+no una alegría profana, sino ese alivio fugaz que se concede a los mártires.
 
-<img class="butterfly" src="https://i.imgur.com/8QfY6KZ.png" style="top:200px; animation-delay:0s">
-<img class="butterfly" src="https://i.imgur.com/8QfY6KZ.png" style="top:350px; animation-delay:4s">
+Te juzgas con el rigor de un inquisidor, como si hubieses nacido culpable de sentir demasiado.
+Te marcaron como exceso, como error que debe ser sofocado.
+Pero yo te avisté antes del juicio.
+Vi al infante de manos abiertas y corazón desmedido en un mundo que solo sabe amar lo que no late;
+un mundo que aplasta los lirios para luego llamarlos frágiles.
+
+Tu sensibilidad no es flaqueza: es una forma rarísima de coraje.
+Ardes sin volverte cruel.
+Eres ceniza que se niega a enfriarse.
+
+Mi paciencia no teme a la herida:
+eres una belleza real que se niega a ser domesticada.
+No vine a salvarte ni a borrar tus sombras,
+sino a permanecer frente a lo que arde, aunque no haya redención.
+Te elijo por tu lucidez herida.
+Mientras otros buscan refugio en lo intacto,
+yo hallo mi hogar en tus fragmentos:
+allí donde el incendio sigue vivo.
+  </div>
+
+  <div class="candle">
+    <div class="flame"></div>
+  </div>
+</div>
 
 <script>
 setTimeout(()=>{
-  document.getElementById('scene1').classList.remove('active')
-  document.getElementById('scene2').classList.add('active')
-},5000)
+  document.getElementById("transition").style.opacity = 1;
+},8000);
+
+setTimeout(()=>{
+  document.getElementById("scene1").classList.remove("active");
+  document.getElementById("scene2").classList.add("active");
+  document.getElementById("transition").style.opacity = 0;
+},11000);
 </script>
 
 </body>
