--- a/index.html
+++ b/index.html
@@ -2,173 +2,156 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Lilium – Carta Gótica</title>
+<title>Lilium Rosa — Carta Victoriana</title>
 
 <style>
-html, body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  background: #0b0814;
-  font-family: "Georgia", serif;
+html,body{
+  margin:0;
+  padding:0;
+  width:100%;
+  height:100%;
+  background:#07040d;
+  overflow:hidden;
+  font-family:"Georgia",serif;
 }
 
-/* ESCENAS */
-.scene {
-  position: absolute;
-  inset: 0;
-  opacity: 0;
-  transition: opacity 3s ease;
+/* ---------- ESCENAS ---------- */
+.scene{
+  position:absolute;
+  inset:0;
+  opacity:0;
+  transition:opacity 3s ease;
+}
+.scene.active{opacity:1}
+
+/* ---------- CANVAS ATMOSFÉRICO ---------- */
+canvas{
+  position:absolute;
+  inset:0;
 }
 
-.scene.active {
-  opacity: 1;
+/* ---------- ESCENA 1 ---------- */
+.scene1{
+  background:radial-gradient(circle at top,#2b1640,#080410 70%);
 }
 
-/* ATMÓSFERA */
-.twilight {
-  background: radial-gradient(circle at top, #2a183f, #090612 70%);
+.lilium{
+  position:absolute;
+  bottom:60px;
+  left:50%;
+  transform:translateX(-50%);
+  width:420px;
+  animation:breath 7s ease-in-out infinite;
+  filter:drop-shadow(0 0 35px #c87aa8);
 }
 
-.particles::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background:
-    radial-gradient(#ffffff55 1px, transparent 1px),
-    radial-gradient(#ffffff33 1px, transparent 1px);
-  background-size: 3px 3px, 6px 6px;
-  animation: floatParticles 12s linear infinite;
+@keyframes breath{
+  0%,100%{transform:translateX(-50%) scale(1)}
+  50%{transform:translateX(-50%) scale(1.06)}
 }
 
-@keyframes floatParticles {
-  from { transform: translateY(0); }
-  to { transform: translateY(-40px); }
+/* ---------- MARIPOSAS ---------- */
+.butterfly{
+  position:absolute;
+  width:60px;
+  pointer-events:none;
 }
 
-/* LILIUM */
-.lilium {
-  position: absolute;
-  bottom: 80px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 380px;
-  animation: breathe 6s ease-in-out infinite;
-  filter: drop-shadow(0 0 25px #c77aa0);
+.purple{filter:hue-rotate(260deg) saturate(1.4)}
+.red{filter:hue-rotate(330deg) saturate(1.6)}
+
+/* ---------- PERGAMINO ---------- */
+.parchment{
+  position:absolute;
+  top:10%;
+  left:50%;
+  transform:translateX(-50%) scale(.9);
+  width:62%;
+  padding:42px;
+  background:#f3eadb;
+  border:10px solid #2a1723;
+  box-shadow:0 0 60px rgba(0,0,0,.85);
+  opacity:0;
+  animation:ritual 4s ease forwards;
+  animation-delay:5s;
 }
 
-@keyframes breathe {
-  0%,100% { transform: translateX(-50%) scale(1); }
-  50% { transform: translateX(-50%) scale(1.05); }
+@keyframes ritual{
+  to{opacity:1; transform:translateX(-50%) scale(1)}
 }
 
-/* MARIPOSAS */
-.butterfly {
-  position: absolute;
-  width: 60px;
-  animation: fly 14s linear infinite;
+.parchment p{
+  color:#2a1723;
+  font-size:18px;
+  line-height:1.65;
+  text-align:center;
 }
 
-.purple { filter: hue-rotate(260deg) saturate(1.3); }
-.red { filter: hue-rotate(330deg) saturate(1.5); }
-
-@keyframes fly {
-  from { transform: translateX(-10vw) translateY(0); }
-  to { transform: translateX(110vw) translateY(-120px); }
+/* ---------- TRANSICIÓN ---------- */
+.transition{
+  position:absolute;
+  inset:0;
+  background:#0a0613;
+  opacity:0;
+  transition:opacity 3s ease;
 }
 
-/* PERGAMINO */
-.parchment {
-  position: absolute;
-  top: 15%;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 60%;
-  padding: 40px;
-  background: #f2eadc;
-  border: 8px solid #2a1b24;
-  box-shadow: 0 0 40px rgba(0,0,0,.8);
-  opacity: 0;
-  animation: appear 4s ease forwards;
-  animation-delay: 4s;
+/* ---------- ESCENA 2 ---------- */
+.scene2{
+  background:radial-gradient(circle,#1a0e12,#050203);
 }
 
-@keyframes appear {
-  to { opacity: 1; }
+.candle{
+  position:absolute;
+  bottom:110px;
+  left:50%;
+  transform:translateX(-50%);
+  width:22px;
+  height:90px;
+  background:#e8d6b8;
 }
 
-.parchment p {
-  color: #2a1b24;
-  font-size: 18px;
-  line-height: 1.6;
-  text-align: center;
+.flame{
+  position:absolute;
+  top:-34px;
+  left:50%;
+  transform:translateX(-50%);
+  width:22px;
+  height:34px;
+  background:radial-gradient(circle,#ffdca0,#ff8c00);
+  border-radius:50%;
+  animation:flicker 1.4s infinite;
 }
 
-/* TRANSICIÓN */
-.transition {
-  position: absolute;
-  inset: 0;
-  background: rgba(20,10,30,0.95);
-  opacity: 0;
-  transition: opacity 3s ease;
+@keyframes flicker{
+  0%,100%{transform:translateX(-50%) scale(1)}
+  50%{transform:translateX(-50%) scale(.85)}
 }
 
-/* ESCENA 2 */
-.interior {
-  background: radial-gradient(circle, #1a0e12, #050204);
-}
-
-.candle {
-  position: absolute;
-  bottom: 120px;
-  left: 50%;
-  width: 20px;
-  height: 80px;
-  background: #e6d3b1;
-  transform: translateX(-50%);
-}
-
-.flame {
-  position: absolute;
-  top: -30px;
-  left: 50%;
-  width: 20px;
-  height: 30px;
-  background: radial-gradient(circle, #ffd27d, #ff8c00);
-  border-radius: 50%;
-  transform: translateX(-50%);
-  animation: flicker 1.5s infinite;
-}
-
-@keyframes flicker {
-  0%,100% { transform: translateX(-50%) scale(1); }
-  50% { transform: translateX(-50%) scale(0.85); }
-}
-
-.text2 {
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 65%;
-  color: #e6d3b1;
-  font-size: 16px;
-  line-height: 1.6;
-  white-space: pre-wrap;
+.text2{
+  position:absolute;
+  top:8%;
+  left:50%;
+  transform:translateX(-50%);
+  width:68%;
+  color:#e8d6b8;
+  font-size:16px;
+  line-height:1.65;
+  white-space:pre-wrap;
 }
 </style>
 </head>
 
 <body>
 
+<canvas id="fx"></canvas>
+
 <!-- ESCENA 1 -->
-<div class="scene active twilight particles" id="scene1">
+<div class="scene scene1 active" id="scene1">
   <img class="lilium" src="https://i.imgur.com/9wH4X2B.png">
 
-  <img class="butterfly purple" src="https://i.imgur.com/8QfY6KZ.png" style="top:40%; animation-delay:0s">
-  <img class="butterfly red" src="https://i.imgur.com/8QfY6KZ.png" style="top:55%; animation-delay:5s">
+  <img class="butterfly purple" src="https://i.imgur.com/8QfY6KZ.png">
+  <img class="butterfly red" src="https://i.imgur.com/8QfY6KZ.png">
 
   <div class="parchment">
     <p>
@@ -184,9 +167,71 @@ mi amor.
 <div class="transition" id="transition"></div>
 
 <!-- ESCENA 2 -->
-<div class="scene interior" id="scene2">
-  <div class="text2">
-mi cumpleañeros favorito, mi alma unida a la tuya,
+<div class="scene scene2" id="scene2">
+  <div class="text2" id="typed"></div>
+  <div class="candle"><div class="flame"></div></div>
+</div>
+
+<script>
+/* ---------- CANVAS PARTÍCULAS / HUMO ---------- */
+const canvas=document.getElementById("fx");
+const ctx=canvas.getContext("2d");
+resize();
+window.addEventListener("resize",resize);
+
+let particles=[];
+for(let i=0;i<160;i++){
+  particles.push({
+    x:Math.random()*canvas.width,
+    y:Math.random()*canvas.height,
+    r:Math.random()*2+0.5,
+    v:Math.random()*0.4+0.1
+  });
+}
+
+function draw(){
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+  ctx.fillStyle="rgba(255,255,255,.25)";
+  particles.forEach(p=>{
+    ctx.beginPath();
+    ctx.arc(p.x,p.y,p.r,0,Math.PI*2);
+    ctx.fill();
+    p.y-=p.v;
+    if(p.y<0)p.y=canvas.height;
+  });
+  requestAnimationFrame(draw);
+}
+draw();
+
+function resize(){
+  canvas.width=innerWidth;
+  canvas.height=innerHeight;
+}
+
+/* ---------- MARIPOSAS ORGÁNICAS ---------- */
+document.querySelectorAll(".butterfly").forEach((b,i)=>{
+  let t=0;
+  setInterval(()=>{
+    t+=0.01;
+    b.style.left=(50+Math.sin(t+i)*40)+"vw";
+    b.style.top=(40+Math.cos(t*1.3+i)*25)+"vh";
+  },30);
+});
+
+/* ---------- TRANSICIÓN ---------- */
+setTimeout(()=>{
+  document.getElementById("transition").style.opacity=1;
+},9000);
+
+setTimeout(()=>{
+  document.getElementById("scene1").classList.remove("active");
+  document.getElementById("scene2").classList.add("active");
+  document.getElementById("transition").style.opacity=0;
+  typeText();
+},12000);
+
+/* ---------- TEXTO ESCRITO ---------- */
+const fullText=`mi cumpleañeros favorito, mi alma unida a la tuya,
 Inquiriste una vez —en el refugio del silencio— si existiría un alma capaz de ofrendar su aliento por la tuya.
 Yo callé. No por ignorancia, sino porque hay amores de una estirpe tan vasta que lacerarían los labios al intentar nombrarlos.
 Mis silencios anhelaban hacerse carne, verso y gesto irreversible.
@@ -211,24 +256,17 @@ sino a permanecer frente a lo que arde, aunque no haya redención.
 Te elijo por tu lucidez herida.
 Mientras otros buscan refugio en lo intacto,
 yo hallo mi hogar en tus fragmentos:
-allí donde el incendio sigue vivo.
-  </div>
+allí donde el incendio sigue vivo.`;
 
-  <div class="candle">
-    <div class="flame"></div>
-  </div>
-</div>
-
-<script>
-setTimeout(()=>{
-  document.getElementById("transition").style.opacity = 1;
-},8000);
-
-setTimeout(()=>{
-  document.getElementById("scene1").classList.remove("active");
-  document.getElementById("scene2").classList.add("active");
-  document.getElementById("transition").style.opacity = 0;
-},11000);
+function typeText(){
+  let i=0;
+  const target=document.getElementById("typed");
+  const interval=setInterval(()=>{
+    target.textContent+=fullText[i];
+    i++;
+    if(i>=fullText.length)clearInterval(interval);
+  },25);
+}
 </script>
 
 </body>
